--- a/container/nginx.conf
+++ b/container/nginx.conf
@@ -17,12 +17,28 @@ http {
         error_page 404 /404.html;
         error_page 500 /500.html;
 
-        location ~ ^/posts/(.*)$ {
-            proxy_pass http://posts_upstream/$1;
+        location ~* ^/(blog|posts)/(.*\.(css|js|png|jpg|jpeg|gif|ico|svg))$ {
+            set $project $1;
+            proxy_pass http://${project}_upstream/$2;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location ~ ^/blog/(.*)$ {
-            proxy_pass http://blog_upstream/$1;
+        # Serve the main app (shell) and its static files
+        location / {
+            try_files $uri $uri/ /index.html;
         }
+
+        # Proxy pass for other apps
+        location ~ ^/(blog|posts)/(.*)$ {
+            set $project $1;
+            proxy_pass http://${project}_upstream/$2;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            # More config
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
     }
 }
