add react projects

--- a/container/nginx/nginx.conf
+++ b/container/nginx/nginx.conf
@@ -9,6 +9,18 @@ http {
         server blog_hostname:8082;
     }
 
+    upstream store_upstream {
+        server store_hostname:8083;
+    }
+
+
+    map $uri $app {
+        ~^/blog(.*)$   remote/blog$1;
+        ~^/posts(.*)$  remote/posts$1;
+        ~^/store(.*)$  remote/store$1;
+        default        "";
+    }
+    
     server {
         root /usr/share/nginx/html;
         listen 8000;
@@ -17,7 +29,7 @@ http {
         error_page 404 /404.html;
         error_page 500 /500.html;
 
-        location ~* ^/(blog|posts)/(.*\.(css|js|png|jpg|jpeg|gif|ico|svg))$ {
+        location ~* ^/(blog|posts|store)/(.*\.(css|js|png|jpg|jpeg|gif|ico|svg))$ {
             set $project $1;
             proxy_pass http://${project}_upstream/$2;
             proxy_set_header Host $host;
@@ -30,7 +42,7 @@ http {
         }
 
         # Proxy pass for other apps
-        location ~ ^/(blog|posts)/(.*)$ {
+        location ~ ^/(blog|posts|store)/(.*)$ {
             set $project $1;
             proxy_pass http://${project}_upstream/$2;
             proxy_set_header Host $host;
@@ -38,6 +50,11 @@ http {
             # More config
             # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~ ^/(blog|posts|store)/(.*)$ {
+            set $PAGE $app;  # Set the PAGE variable dynamically based on the matched route
+            try_files $uri $uri/ /index.html;  # Try serving the file, else fall back to index.html
         }
 
     }
