--- a/container/nginx/nginx.conf
+++ b/container/nginx/nginx.conf
@@ -41,6 +41,10 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+       location /sharedWorker.js {
+            alias /usr/share/nginx/html/sharedWorker.js;
+        }
+
         # Proxy pass for other apps
         location ~ ^/(blog|posts|store)/(.*)$ {
             set $project $1;
