--- a/container/nginx/nginx.conf
+++ b/container/nginx/nginx.conf
@@ -43,6 +43,9 @@ http {
 
        location /sharedWorker.js {
             alias /usr/share/nginx/html/sharedWorker.js;
+            if ($http_origin ~* "http://localhost:808[12]") {
+                add_header 'Access-Control-Allow-Origin' $http_origin;
+            }
         }
 
         # Proxy pass for other apps
